[package]
name = "naitou-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
arrayvec = "0.7.2"
clap = "2.34.0"
fceux = { path = "fceux-rs", optional = true }
fern = "0.6.0"
log = "0.4.14"
num-traits = "0.2.14"
num_cpus = "1.13.1"
once_cell = "1.9.0"
sdl2 = { version = "0.35.1", optional = true }
structopt = "0.3.25"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
criterion = "0.3.5"
itertools = "0.10.3"
pretty_assertions = "1.0.0"
walkdir = "2.3.2"

[features]
emu = [ "fceux" ]
sdl = [ "sdl2" ]

[[bin]]
name = "emu_trace"
required-features = [ "emu", "sdl" ]

[[bin]]
name = "kifu_to_movie"
required-features = [ "emu" ]

[[bench]]
name = "bench"
harness = false
